style.css
body {
  background-color: #ff6f3c;
  margin: 0;
  font-family: "Lato", sans-serif;
}

.timer-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.timer-contents {
  background-color: #ffffff31;
  border-radius: 2rem;
  width: 800px;
  max-width: 95%;
  margin: 1rem;
}

.header {
  background-color: #ffc93c;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  margin: 0 0 1rem 0;
}

.header h1 {
  font-size: 3rem;
  color: #155263;
  margin: 0;
  font-family: "Pattaya", sans-serif;
}

#status,
#timer,
.buttons {
  display: flex;
  justify-content: center;
  align-items: center;
}

#timer {
  font-size: 10rem;
  margin: 1rem;
  color: #fff;
}

#status {
  font-size: 4rem;
  color: #155263;
  margin: 1rem;
  font-family: "Pattaya", sans-serif;
}

.button {
  text-decoration: none;
  border: 2px solid #fff;
  border-radius: 4rem;
  cursor: pointer;
  padding: 20px;
  background-color: #155263;
  height: 100px;
  width: 100px;
}

.button img {
  height: 40px;
}

.button:hover{
  background-color: #227d96;
}

.settings{
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0) /*scale(0) = Invisible*/;
  background-color:#fff;
  border-radius: 1rem;
  box-sizing: border-box;
  z-index: 10;
  width: 500px;
  max-width: 80%; 
}

.settings.active{
  transform: translate(-50%, -50%) scale(1);
}

.settings-header{
  padding: 10px 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid black;
}

.settings-title{
  font-size: 1.25rem;
  font-weight: bold;
}

.close-button{
  cursor: pointer;
  border: none;
  outline: none;
  background: none;
  font-size: 1.25rem;
  font-weight: bold;
}

.close-button:hover{
  color: rgb(209, 56, 56);
}

.settings-body{
  padding: 10px 15px;
}

#overlay{
  position: fixed;
  opacity: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: hsla(0, 0%, 0%, 0.5);
  pointer-events: none;
}

#overlay.active{
  pointer-events: all;
  opacity: 1;
}

